// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BouncePage:  should display loading panel on top level metrics when aggregates are loading 1`] = `
<Page
  empty={Object {}}
  title="Bounce Report"
>
  <withRouter(Connect(ReportOptions))
    reportLoading={true}
    searchOptions={Object {}}
  />
  <PanelLoading
    minHeight="115px"
  />
  <BounceChart
    aggregates={
      Object {
        "countBounce": 1,
        "countTargeted": 10,
      }
    }
    loading={true}
  />
  <Panel
    className="ReasonsTable"
    title="Bounced Messages"
  >
    <TableCollection
      columns={
        Array [
          Object {
            "label": "Reason",
            "sortKey": "reason",
            "width": "45%",
          },
          Object {
            "label": "Domain",
            "sortKey": "domain",
          },
          Object {
            "label": "Category",
            "sortKey": "bounce_category_name",
          },
          Object {
            "label": "Classification",
            "sortKey": "classification_id",
          },
          Object {
            "label": "Count (%)",
            "sortKey": "count_bounce",
          },
        ]
      }
      defaultSortColumn="count_bounce"
      defaultSortDirection="desc"
      getRowData={[Function]}
      pagination={true}
      rows={
        Array [
          Object {
            "bounce_category_name": "Block",
            "bounce_class_description": "The message was blocked by the receiver as coming from a known spam source",
            "bounce_class_name": "Spam Block",
            "classification_id": 51,
            "count_bounce": 5,
            "domain": "yahoo.com",
            "reason": "554 - 5.7.1 Blacklisted by 'twoomail.com'(twoo.com.multi.surbl.org) Contact the postmaster of this domain for resolution. This attempt has been logged.",
          },
        ]
      }
    />
  </Panel>
</Page>
`;

exports[`BouncePage:  should render 1`] = `
<Page
  empty={Object {}}
  title="Bounce Report"
>
  <withRouter(Connect(ReportOptions))
    searchOptions={Object {}}
  />
  <Connect(MetricsSummary)
    rateTitle="Bounce Rate"
    rateValue={10}
  >
    <strong>
      1
    </strong>
     of your messages were bounced of 
    <strong>
      10
    </strong>
     messages targeted
  </Connect(MetricsSummary)>
  <BounceChart
    aggregates={
      Object {
        "countBounce": 1,
        "countTargeted": 10,
      }
    }
  />
  <Panel
    className="ReasonsTable"
    title="Bounced Messages"
  >
    <TableCollection
      columns={
        Array [
          Object {
            "label": "Reason",
            "sortKey": "reason",
            "width": "45%",
          },
          Object {
            "label": "Domain",
            "sortKey": "domain",
          },
          Object {
            "label": "Category",
            "sortKey": "bounce_category_name",
          },
          Object {
            "label": "Classification",
            "sortKey": "classification_id",
          },
          Object {
            "label": "Count (%)",
            "sortKey": "count_bounce",
          },
        ]
      }
      defaultSortColumn="count_bounce"
      defaultSortDirection="desc"
      getRowData={[Function]}
      pagination={true}
      rows={
        Array [
          Object {
            "bounce_category_name": "Block",
            "bounce_class_description": "The message was blocked by the receiver as coming from a known spam source",
            "bounce_class_name": "Spam Block",
            "classification_id": 51,
            "count_bounce": 5,
            "domain": "yahoo.com",
            "reason": "554 - 5.7.1 Blacklisted by 'twoomail.com'(twoo.com.multi.surbl.org) Contact the postmaster of this domain for resolution. This attempt has been logged.",
          },
        ]
      }
    />
  </Panel>
</Page>
`;

exports[`BouncePage:  should render correctly with no bounces 1`] = `
<Page
  empty={Object {}}
  title="Bounce Report"
>
  <withRouter(Connect(ReportOptions))
    searchOptions={Object {}}
  />
  <Empty
    message="No bounces to report"
    title="Bounce Rates"
  />
  <Panel
    className="ReasonsTable"
    title="Bounced Messages"
  >
    <TableCollection
      columns={
        Array [
          Object {
            "label": "Reason",
            "sortKey": "reason",
            "width": "45%",
          },
          Object {
            "label": "Domain",
            "sortKey": "domain",
          },
          Object {
            "label": "Category",
            "sortKey": "bounce_category_name",
          },
          Object {
            "label": "Classification",
            "sortKey": "classification_id",
          },
          Object {
            "label": "Count (%)",
            "sortKey": "count_bounce",
          },
        ]
      }
      defaultSortColumn="count_bounce"
      defaultSortDirection="desc"
      getRowData={[Function]}
      pagination={true}
      rows={
        Array [
          Object {
            "bounce_category_name": "Block",
            "bounce_class_description": "The message was blocked by the receiver as coming from a known spam source",
            "bounce_class_name": "Spam Block",
            "classification_id": 51,
            "count_bounce": 5,
            "domain": "yahoo.com",
            "reason": "554 - 5.7.1 Blacklisted by 'twoomail.com'(twoo.com.multi.surbl.org) Contact the postmaster of this domain for resolution. This attempt has been logged.",
          },
        ]
      }
    />
  </Panel>
</Page>
`;

exports[`BouncePage:  should render row data properly 1`] = `
Array [
  <LongTextContainer
    text="u y bounce?"
  />,
  <UnstyledLink
    onClick={[Function]}
  >
    gmail
  </UnstyledLink>,
  "bouncy",
  undefined,
  <span>
    10
     
    <small>
      (
      <Percent
        value={1000}
      />
      )
    </small>
  </span>,
]
`;

exports[`BouncePage:  should show empty reasons table when there are no reasons 1`] = `
<Page
  empty={Object {}}
  title="Bounce Report"
>
  <withRouter(Connect(ReportOptions))
    searchOptions={Object {}}
  />
  <Connect(MetricsSummary)
    rateTitle="Bounce Rate"
    rateValue={10}
  >
    <strong>
      1
    </strong>
     of your messages were bounced of 
    <strong>
      10
    </strong>
     messages targeted
  </Connect(MetricsSummary)>
  <BounceChart
    aggregates={
      Object {
        "countBounce": 1,
        "countTargeted": 10,
      }
    }
  />
  <Panel
    className="ReasonsTable"
    title="Bounced Messages"
  >
    <Empty
      message="No bounce reasons to report"
    />
  </Panel>
</Page>
`;

exports[`BouncePage:  should show loading panel when table is loading 1`] = `
<Page
  empty={Object {}}
  title="Bounce Report"
>
  <withRouter(Connect(ReportOptions))
    searchOptions={Object {}}
  />
  <Connect(MetricsSummary)
    rateTitle="Bounce Rate"
    rateValue={10}
  >
    <strong>
      1
    </strong>
     of your messages were bounced of 
    <strong>
      10
    </strong>
     messages targeted
  </Connect(MetricsSummary)>
  <BounceChart
    aggregates={
      Object {
        "countBounce": 1,
        "countTargeted": 10,
      }
    }
  />
  <Panel
    className="ReasonsTable"
    title="Bounced Messages"
  >
    <PanelLoading
      minHeight="400px"
    />
  </Panel>
</Page>
`;
